src/test/deca/extension/codegen/valid/test_acces_dimension_tableau.deca
// Description:
// Test la declaration de matrice/ acces et modification de valeur
// Resultats:
//  Le resulat attendu est dans le fichier avec "ce_nom"_output_expected au le dossier ./result
// Historique:
//    cree le 01/01/2023


{
    int[] x = new int[5]; 
    int[][] y = new int[5][10];
    println(x.size1D, "expected = 5");
    println(y.size1D, "expected = 5");
    println(y.size2D, "expected = 10");

}