src/test/deca/extension/codegen/invalid/test_modification_dimension.deca
// Description:
// Test la modification de dimension qui est impossible
// Resultats:
//  Le resulat attendu est dans le fichier avec "ce_nom"_output_expected au le dossier ./result
// Historique:
//    cree le 01/01/2023


{
    int[] x = new int[10]; 
    x.size1D = 5;
}